# python-development-environment

./: abc.csv  poetry.toml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: main.py
