[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "Hello World"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.5.3"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
